# CROW_SERVER

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  crow_server.ini  debug.cfg  postreq.sh  start.sh  websocketreq.py
.github/workflows/: build-and-release.yml  test-build.yml
`lib/: RepositoryManager.lib
client/: example.html
dll/win64/: GFileAnalysis.lib  GuideSDK.lib  PortingMod_Debug_x64.lib  PortingMod_Release_x64.lib
enc_temp_folder/106953a14e8be2a545631aea8bed5a4d/: VideoCamera.hpp
include/GaoDe/: GuideSDK.h  SDKParams.h  common_log.h  common_type.h  porting_file.h  porting_thread.h
src/: CMakeLists.txt
src/Utility/: CMakeLists.txt  ConfigManager.hpp  CsvExample.cpp  CsvWriter.cpp  CsvWriter.h  config.hpp  executable_path.cpp  executable_path.h
src/controller/: CMakeLists.txt  HelpDocManager.hpp  logHandler.hpp  main.cpp  routes.hpp  version.h
src/repository/: CMakeLists.txt  RepositoryManager.cpp  RepositoryManager.hpp  VideoCamera.hpp
src/service/: CMakeLists.txt  MiddleWare.hpp  MiddleWareImpl.hpp  PebbleLog.cpp  PebbleLog.h  ServiceManager.cpp  ServiceManager.hpp  VideoCamera.hpp  VideoExample.cpp
test/: CMakeLists.txt  test_routes.py
